syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/moderation";
package api.moderation;

//	type Body struct {
//ID        string                 `gorm:"primary_key;AUTO_INCREMENT;column:id;type:TEXT;" json:"id"`
//Type      ModerationSettingsType `gorm:"column:type;type:VARCHAR;" json:"type"`
//ChannelID string                 `gorm:"column:channel_id;type:TEXT;" json:"channel_id"`
//Enabled   bool                   `gorm:"column:enabled;type:BOOL;default:false;" json:"enabled"`
//
//BanTime        int32  `gorm:"column:ban_time;type:INT4;default:600;" json:"ban_time"`
//BanMessage     string `gorm:"column:ban_message;type:TEXT;" json:"ban_message"`
//WarningMessage string `gorm:"column:warning_message;type:TEXT;" json:"warning_message"`
//
//CheckClips            bool           `gorm:"column:check_clips;type:BOOL;default:false;" json:"check_clips"`
//TriggerLength         int            `gorm:"column:trigger_length;type:INT4;default:300;" json:"trigger_length"`
//MaxPercentage         int            `gorm:"column:max_percentage;type:INT4;default:50;" json:"max_percentage"`
//DenyList              pq.StringArray `gorm:"column:deny_list;type:JSONB;default:[];" json:"deny_list"`
//	AcceptedChatLanguages pq.StringArray `gorm:"column:accepted_chat_languages;type:JSONB;default:[];" json:"accepted_chat_languages"`
//	ExcludedRoles         pq.StringArray `gorm:"column:excluded_roles;type:JSONB;default:[];" json:"excluded_roles"`
//	MaxWarnings           int            `gorm:"column:max_warnings;type:INT4;default:0;" json:"max_warnings"`
//
//	CreatedAt time.Time `gorm:"column:created_at;type:TIMESTAMPTZ;default:now();" json:"created_at"`
//	UpdatedAt time.Time `gorm:"column:updated_at;type:TIMESTAMPTZ;default:now();" json:"updated_at"`
//	}

message Item {
	string type = 1;
	string channel_id = 2;
	bool enabled = 3;
	int32 ban_time = 4;
	string ban_message = 5;
	string warning_message = 6;
	bool check_clips = 7;
	int32 trigger_length = 8;
	int32 max_percentage = 9;
	repeated string deny_list = 10;
	repeated string denied_chat_languages = 11;
	repeated string excluded_roles = 12;
	int32 max_warnings = 13;
	string created_at = 14;
	string updated_at = 15;
}

message ItemCreateMessage {
	string type = 1;
	bool enabled = 2;
	int32 ban_time = 3;
	string ban_message = 4;
	string warning_message = 5;
	bool check_clips = 6;
	int32 trigger_length = 7;
	int32 max_percentage = 8;
	repeated string deny_list = 9;
	repeated string denied_chat_languages = 10;
	repeated string excluded_roles = 11;
	int32 max_warnings = 12;
}

message ItemWithId {
	string id = 1;
	Item data = 2;
}

message CreateRequest {
	ItemCreateMessage data = 1;
}

message UpdateRequest {
	string id = 1;
	ItemCreateMessage data = 2;
}

message GetAllResponse {
	repeated ItemWithId body = 1;
}

message DeleteRequest {
	string id = 1;
}

message PatchRequest {
	string id = 1;
	bool enabled = 2;
}
