syntax = "proto3";
option go_package = "tsuwari/grpc/language_detector";
package language_detector;
import "google/protobuf/empty.proto";

service LanguageDetector {
	rpc Detect(Request) returns (Response) {}
}

message Request {
	string text = 1;
}

message Response {
	message Language {
		string name = 1;
		int32 score = 2;
		int32 percent = 3;
		string code = 4;
	}

	message Chunk {
		string name = 1;
		int32 offset = 2;
		int32 bytes = 3;
		string code = 4;
	}

	repeated Language languages = 1;
	repeated Chunk chunks = 2;
}
